# matproplib

./: .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
conditions/: index.html
conversions/: index.html
documentation/doi_plugin/: pyproject.toml
documentation/doi_plugin/doi/: plugin.py
documentation/source/: conditions.md  conversions.md  index.md  properties.md  superconductors.md
examples/: basic_usage.ex.py  index.html  library_material.ex.py  mixture.ex.py
examples/basic_usage.ex/: index.html
examples/library_material.ex/: index.html
examples/mixture.ex/: index.html
matproplib/: __init__.py  base.py  conditions.py  material.py  nucleides.py  superconduction.py
matproplib/converters/: base.py  matml.py  neutronics.py
matproplib/properties/: dependent.py  group.py  independent.py  mixture.py
matproplib/tools/: __init__.py  neutronics.py  plotting.py  serialisation.py  tools.py
physical_materials/: __init__.py  _serialisation.py  base.py  conditions.py  material.py  nucleides.py  superconduction.py
physical_materials/converters/: base.py  neutronics.py
physical_materials/tools/: tools.py  (+3 more)
properties/: index.html
rs/: Cargo.toml  pyproject.toml
rs/src/: chemical_formula.rs  conditions.rs  lib.rs  materials.rs  nucleides.rs  physicalproperties.rs  tools.rs
search/: search_index.json
superconductors/: index.html
tests/: conftest.py  test_base.py  test_conditions.py  test_material.py  test_nucleides.py  test_properties.py
(+29 files in other folders)
