[package]
name = "matproplib"
version = "0.1.0"
edition = "2024"

[lib]
name = "matproplib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
numpy = "0.28"
uom = {version = "0.38.0", features = [ "serde" ]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12.3"
mendeleev = "0.8.4"
